tests/ui/never_type/diverging-place-match.stderr
error[E0308]: mismatched types
  --> $DIR/diverging-place-match.rs:4:5
   |
LL |   fn make_up_a_value<T>() -> T {
   |                      - expected this type parameter
LL | /     unsafe {
LL | |
LL | |         let x: *const ! = 0 as _;
LL | |         let _: ! = *x;
LL | |         // Since `*x` "diverges" in HIR, but doesn't count as a read in MIR, this
LL | |         // is unsound since we act as if it diverges but it doesn't.
LL | |     }
   | |_____^ expected type parameter `T`, found `()`
   |
   = note: expected type parameter `T`
                   found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
